--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^4.23.2",
+		"@clerk/themes": "^1.7.5",
+		"@hookform/resolvers": "^3.2.0",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
+		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tooltip": "^1.0.6",
 		"@types/node": "20.5.0",
 		"@types/react": "18.2.20",
 		"@types/react-dom": "18.2.7",
@@ -27,10 +31,12 @@
 		"postcss": "8.4.28",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.45.4",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"tailwindcss-animate": "^1.0.6",
-		"typescript": "5.1.6"
+		"typescript": "5.1.6",
+		"zod": "^3.22.2"
 	},
 	"browser": {
 		"fs": false,
